<resources>
    <string name="DEFAULT_CHANNEL_ID">Hijacker_Notification_Channel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_point">Access Point</string>
    <string name="action_delete_message">This action will be permanently deleted. Are you sure?</string>
    <string name="action_delete_title">Delete Action?</string>
    <string name="action_exists">An action with this name already exists</string>
    <string name="ad_hoc">Ad-hoc</string>
    <string name="ados_title">Authentication DoS</string>
    <string name="agree">I agree</string>
    <string name="airOnStartup">false</string>
    <string name="aireplay_not_running">Aireplay is not running!</string>
    <string name="aireplay_still_running">Aireplay is still running!</string>
    <string name="airodump_not_running">Airodump is not running!</string>
    <string name="airodump_still_running">Airodump is still running!</string>
    <string name="all">All</string>
    <string name="already_on_latest">You are running the latest version</string>
    <string name="always_cap">false</string>
    <string name="always_cap_sum">Create a .cap file every time airodump-ng starts</string>
    <string name="always_cap_title">Save all packets</string>
    <string name="ap_stats">Statistics</string>
    <string name="app_name">Hijacker</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="auth">Authentication:</string>
    <string name="auto_update">false</string>
    <string name="back">Back</string>
    <string name="backup_created">Backup created</string>
    <string name="backup_exists">A backup already exists</string>
    <string name="band">1</string>
    <string name="band_sum">Frequencies that airodump will hop on</string>
    <string name="band_title">Band</string>
    <string name="beacons">Beacons:</string>
    <string name="bf_title">Beacon Flooding</string>
    <string name="bin_not_created">"Directory 'bin' could not be created"</string>
    <string name="channels">2.4Ghz Channels:</string>
    <string name="chroot">Chroot</string>
    <string name="chroot_desc">Directory where a kali chroot is installed by NetHunter (required only for pixie-dust attack with reaver)</string>
    <string name="chroot_title">Chroot directory</string>
    <string name="clear">Clear</string>
    <string name="cont_on_fail">false</string>
    <string name="cont_on_fail_sum">Continue running in chroot in case monstart-nh or the custom command fail</string>
    <string name="cont_on_fail_title">Ignore failed commands</string>
    <string name="copy_last_aireplay_title">Copy last Aireplay command</string>
    <string name="copy_last_airodump_title">Copy last Airodump command</string>
    <string name="copy_last_mdk_title">Copy last MDK command</string>
    <string name="copy_last_reaver_title">Copy last Reaver command</string>
    <string name="copy_sample_title">Copy test command</string>
    <string name="custom_action_editor_message">"You can use the following variables:
 $IFACE, $AIRODUMP_DIR, $AIREPLAY_DIR, $MDK3_DIR, $REAVER_DIR
 AP: $MAC, $ESSID, $CH, $ENC, $CIPHER, $AUTH
 ST: $MAC, $BSSID
 The start command will be ran when you run the action and the stop will be ran ONLY when you want to interrupt it. These commands will run as root.
 Go back to discard any changes."</string>
    <string name="custom_action_title">Title</string>
    <string name="custom_chroot_cmd_desc">"This command will be ran in the chroot environment before starting reaver. Can be used to initialize devices, variables etc. For many commands, create a shell script inside the chroot environment and run it from here. Don't use the character '."</string>
    <string name="custom_chroot_cmd_sum">Command to be ran in chroot when starting reaver</string>
    <string name="custom_chroot_cmd_title">Custom command</string>
    <string name="deauthWait">10</string>
    <string name="deauthWait_desc">How long aireplay-ng --deauth will be run when cracking a WPA network before it stops to capture the handshake.</string>
    <string name="deauthWait_sum">Time to deauthenticate clients when cracking WPA</string>
    <string name="deauthWait_title">WPA Deauth wait (sec)</string>
    <string name="debug">true</string>
    <string name="debug_sum">Print debugging messages to logcat. Messages about exceptions will be printed anyway.</string>
    <string name="debug_title">Logcat Messages</string>
    <string name="delete_extra">true</string>
    <string name="delete_extra_sum">Delete .csv and .netxml files created by airodump when saving to .cap file</string>
    <string name="delete_extra_title">Delete extra cap files</string>
    <string name="disable_monMode" />
    <string name="eap_fail">Terminate each session with EAP FAIL</string>
    <string name="enable_monMode" />
    <string name="enable_on_airodump_sum">Run the \"Enable Monitor Mode\" command when starting airodump</string>
    <string name="enable_on_airodump_title">Enable on Airodump start</string>
    <string name="export_title">Export…</string>
    <string name="filter">Filter</string>
    <string name="general">General</string>
    <string name="github_title">Go to GitHub</string>
    <string name="iface">wlan0</string>
    <string name="iface_desc">The WiFi interface that is Monitor Mode enabled.</string>
    <string name="iface_sum">Monitor Mode interface</string>
    <string name="iface_title">Interface</string>
    <string name="ignore_locked">Ignore Locked State reported by the AP</string>
    <string name="install_nexmon_sum">Install the Nexmon driver and its management utility</string>
    <string name="install_nexmon_title">Install Nexmon</string>
    <string name="kill_process_on_stop">Has process to kill when implicitly stopping the action</string>
    <string name="locked_delay">Locked Delay</string>
    <string name="manuf_filter">Manufacturer Filter</string>
    <string name="mm2_desc">Command to disable monitor mode specific to your interface. Will be run AS ROOT when the app is being killed.</string>
    <string name="mm2_sum">Command to disable monitor mode (leave blank if none)</string>
    <string name="mm2_title">Disable Monitor Mode</string>
    <string name="mm_desc">Command to enable monitor mode specific to your interface. Will be run AS ROOT every time airodump-ng starts.</string>
    <string name="mm_sum">Command to enable monitor mode (leave blank if none)</string>
    <string name="mm_title">Enable Monitor Mode</string>
    <string name="monstart">false</string>
    <string name="monstart_sum">Run source monstart-nh command when running reaver in NetHunter chroot (only in NetHunterOS)</string>
    <string name="monstart_title">source monstart-nh</string>
    <string name="no_nack">"Don't send NACKs when out of order packets are received"</string>
    <string name="notif_details_sum">Show additional details about running processes in notification</string>
    <string name="notif_details_title">Show details</string>
    <string name="notif_sum">Show notification when the app is in the background</string>
    <string name="notif_title">Notification</string>
    <string name="opn">OPN</string>
    <string name="other">Other</string>
    <string name="pin_delay">PIN delay</string>
    <string name="pixie_dust">Use pixie-dust (requires NetHunter chroot)</string>
    <string name="power">Power:</string>
    <string name="prefix" />
    <string name="prefix_desc">A prefix for every command that is run and needs monitor mode. (LD_PRELOAD)</string>
    <string name="prefix_sum">Prefix for every command</string>
    <string name="prefix_title">Prefix</string>
    <string name="process_name">Process name</string>
    <string name="requires_clients">Requires clients</string>
    <string name="reset_title">Reset Preferences</string>
    <string name="reverse_sort">Reverse</string>
    <string name="save">Save</string>
    <string name="security">AP Security:</string>
    <string name="select_action">Select action</string>
    <string name="select_ap">Select Access Point</string>
    <string name="select_target">Select target</string>
    <string name="send_feedback_title">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="show_ap">Show Access Points</string>
    <string name="show_client_count">true</string>
    <string name="show_client_count_title">"Show AP's client count"</string>
    <string name="show_details">true</string>
    <string name="show_notif">true</string>
    <string name="show_st">Show Stations</string>
    <string name="show_st_na">Show non-associated stations</string>
    <string name="small_dh">Use small DH keys to improve crack speed</string>
    <string name="sort">Sort:</string>
    <string name="sort_nosort">No sorting</string>
    <string name="start">Start</string>
    <string name="start_command">Start command</string>
    <string name="startup_title">Run Airodump on startup</string>
    <string name="station">Station</string>
    <string name="stop_aireplay">Stop Aireplay</string>
    <string name="stop_command">Stop command</string>
    <string name="target_deauth">false</string>
    <string name="target_deauth_sum">Spawn many targeted deauthentication processes instead of one when disconnecting everyone from a network</string>
    <string name="target_deauth_title">Targeted deauthentication</string>
    <string name="test_sum">Run all the tools to make sure that the settings are correct. Any running tasks will be stopped.</string>
    <string name="test_title">Test tools</string>
    <string name="tools">Tools</string>
    <string name="update_on_startup">Check for updates on startup</string>
    <string name="version_title">Version</string>
    <string name="watchdog">true</string>
    <string name="watchdog_sum">Run a background thread to verify that the tools that are supposed to be running, are actually running. Disable this if you are getting false positives.</string>
    <string name="watchdog_title">Watchdog</string>
</resources>