<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/options_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/select_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_action" style="?android:buttonBarButtonStyle" />
        <Button android:enabled="false" android:id="@id/select_target" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_target" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
    <ScrollView android:id="@id/console_scroll_view" android:background="@color/colorPrimary" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textSize="10.0sp" android:textColor="?android:textColorPrimary" android:id="@id/console" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
    <Button android:enabled="false" android:id="@id/start_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start" style="?android:buttonBarButtonStyle" />
</LinearLayout>
